[gd_scene load_steps=4 format=3 uid="uid://q8aqj6bx2jsh"]

[ext_resource type="FontFile" uid="uid://dco8v0o1bodia" path="res://assets/fonts/Swanston.ttf" id="1_2r0fo"]
[ext_resource type="Script" path="res://scenes/menu/menu.gd" id="1_e6fbm"]

[sub_resource type="Theme" id="Theme_y2i3p"]
default_font = ExtResource("1_2r0fo")
default_font_size = 20

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_y2i3p")
script = ExtResource("1_e6fbm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 0

[node name="SettingsButtons" type="VBoxContainer" parent="MarginContainer"]
visible = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="MarginContainer/SettingsButtons"]
layout_mode = 2
size_flags_vertical = 3

[node name="LanguageHBox" type="HBoxContainer" parent="MarginContainer/SettingsButtons/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LanguageLabel" type="Label" parent="MarginContainer/SettingsButtons/GridContainer/LanguageHBox"]
layout_mode = 2
text = "Язык "

[node name="LanguageSelector" type="OptionButton" parent="MarginContainer/SettingsButtons/GridContainer/LanguageHBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
allow_reselect = true
item_count = 2
popup/item_0/text = "Русский"
popup/item_1/text = "English"
popup/item_1/id = 1
popup/item_1/disabled = true

[node name="VolumeHBox" type="HBoxContainer" parent="MarginContainer/SettingsButtons/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeLabel" type="Label" parent="MarginContainer/SettingsButtons/GridContainer/VolumeHBox"]
layout_mode = 2
text = "Громкость "

[node name="Volume" type="HSlider" parent="MarginContainer/SettingsButtons/GridContainer/VolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="Back" type="Button" parent="MarginContainer/SettingsButtons"]
layout_mode = 2
text = "Назад"

[node name="MainButtons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Logo" type="Label" parent="MarginContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Cirno's Haunt"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainButtonsVBox" type="VBoxContainer" parent="MarginContainer/MainButtons"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/MainButtons/MainButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Settings")
focus_next = NodePath("../Settings")
focus_previous = NodePath("../Quit")
text = "Играть"
metadata/_edit_use_anchors_ = true

[node name="Settings" type="Button" parent="MarginContainer/MainButtons/MainButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../Play")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Play")
text = "Настройки"

[node name="Quit" type="Button" parent="MarginContainer/MainButtons/MainButtonsVBox"]
layout_mode = 2
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_bottom = NodePath("../Play")
focus_next = NodePath("../Play")
focus_previous = NodePath("../Settings")
text = "Выйти"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MarginContainer/SettingsButtons/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/MainButtons/MainButtonsVBox/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/MainButtons/MainButtonsVBox/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/MainButtons/MainButtonsVBox/Quit" to="." method="_on_quit_pressed"]
